<resources>
    <string name="app_version">Version</string>
    <string name="title_activity_manual">Manual</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About Game</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="game_manual">Manual</string>
    <string name="game_score">Score</string>
    <string name="game_time">Time</string>
    <string name="game_cancel">Cancel</string>
    <string name="game_confirm">Confirm</string>
    <string name="game_auto_complete_text">Autocomplete</string>
    <string name="game_press_again">Press again to exit</string>
    <string name="game_load_error">Loading data failed, starting new game…</string>
    <string name="game_close">Close game</string>
    <string name="game_main_menu">Main menu</string>
    <string name="item_game_rules">Game rule</string>
    <string name="item_return_to_main_menu">Return to main menu</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_main_menu">Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_auto_move">Auto move</string>
    <string name="dialog_show_hints">Show hints</string>
    <string name="games_Klondike">Klondike</string>
    <string name="games_Freecell">FreeCell</string>
    <string name="games_Yukon">Yukon</string>
    <string name="games_Spider">Spider</string>
    <string name="games_SimpleSimon">SimpleSimon</string>
    <string name="games_Golf">Golf</string>
    <string name="games_Pyramid">Pyramid</string>
    <string name="games_TriPeaks">TriPeaks</string>
    <string name="games_FortyEight">Forty&amp;Eight</string>
    <string name="games_AcesUp">AcesUp</string>
    <string name="games_Gypsy">Gypsy</string>
    <string name="games_mod3">Mod3</string>
    <string name="games_Canfield">Canfield</string>
    <string name="games_GrandfathersClock">GrandfathersClock</string>
    <string name="games_Vegas">Vegas</string>
    <string name="games_Calculation">Calculation</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="game_longest_run">Longest sequence:</string>
    <string name="dialog_no_hint_available">No hint available!</string>
    <string name="dialog_no_movement_possible">No movement to show!</string>
    <string name="dialog_win_titel">Congratulations!</string>
    <string name="dialog_win_score">Score: %1$d</string>
    <string name="dialog_win_bonus">Bonus: %1$d</string>
    <string name="dialog_win_total">Total: %1$d</string>
    <string name="dialog_mix_cards_title">Mix cards</string>
    <string name="dialog_mix_cards_text">This will shuffle all cards, expect correct sequences and cards on the foundation.</string>
    <string name="dialog_mix_cards_not_available">There are still possible moves!</string>
    <string name="dialog_start_new_game_title">Start new game</string>
    <string name="dialog_start_new_game_text">Your current progress will be lost and a new random game will be dealt.</string>
    <string name="dialog_redeal_title">Give cards again</string>
    <string name="dialog_redeal_text">Your current progress will be lost, but the cards are dealt like in the current game.</string>
    <string name="about_tab_1">Information</string>
    <string name="about_tab_2">Licenses</string>
    <string name="about_tab_3">Changelog</string>
    <string name="about_loading">Loading…</string>
    <string name="about_developer">Developer</string>
    <string name="about_developer_name">Tobias Bielefeld</string>
    <string name="about_compiled">Compiled on</string>
    <string name="about_source_code">Source code</string>
    <string name="about_license">License</string>
    <string name="about_translations">Translations</string>
    <string name="about_further_contributors">Further contributors</string>
    <string name="about_android_support_libraries_title">Android support library</string>
    <string name="about_android_support_libraries_usage">Used for better design and easier development</string>
    <string name="about_material_icons_title">Material design icons</string>
    <string name="about_material_icons_usage">Used for all icons in this application</string>
    <string name="about_material_icons_2_usage">The Support icon is published as \"lightbulb-on\" on &lt;a href="https://materialdesignicons.com/icon/lightbulb-on"&gt;materialdesignicons.com&lt;/a&gt;.</string>
    <string name="about_card_themes_title">Card themes</string>
    <string name="about_card_themes_usage">The card themes were taken from &lt;a href="https://pixabay.com/"&gt;pixabay.com&lt;/a&gt;, for detailed information click &lt;a href="https://github.com/TobiasBielefeld/Simple-Solitaire/blob/master/pictures/cards/LICENSES.txt"&gt;here&lt;/a&gt;</string>
    <string name="about_poker_themes_usage">Used as Poker theme - Available on &lt;a href="https://sourceforge.net/projects/vector-cards/"&gt;sourceforge.net&lt;/a&gt; - Copyright 2015 - Chris Aguilar - conjurenation@gmail.com</string>
    <string name="about_custom_color_picker_title">AmbilWarna library</string>
    <string name="about_custom_color_picker_usage">Used for the custom color picker</string>
    <string name="about_sounds_title">Sounds</string>
    <string name="about_sounds_usage">All sounds were originally published on &lt;a href="https://freesound.org"&gt;freesound.org&lt;/a&gt;, for detailed information click &lt;a href="https://github.com/TobiasBielefeld/Simple-Solitaire/blob/master/sounds/readme.txt"&gt;here&lt;/a&gt;</string>
    <string name="about_sliding_tabs_title">PagerSlidingTabStrip library</string>
    <string name="about_sliding_tabs_usage">Used for the tabs in the \"About game\" screen</string>
    <string name="manual_games">Games</string>
    <string name="manual_feedback">Feedback</string>
    <string name="manual_startpage">Start page</string>
    <string name="manual_back_to_game">Back to game</string>
    <string name="manual_structure">Structure</string>
    <string name="manual_objective">Objective</string>
    <string name="manual_rules">Rules</string>
    <string name="manual_scoring">Scoring</string>
    <string name="manual_main_menu">Main menu</string>
    <string name="manual_ui">User interface</string>
    <string name="page_load_error">No page for this game available…</string>
    <string name="manual_bonus">After winning a game, you get a bonus: The faster you win, the higher the bonus will be.</string>
    <string name="manual_open_google_play">Open Google Play</string>
    <string name="manual_open_github">Open GitHub Repo</string>
    <string name="manual_games_text1">Choose a game to show it\'s structure, objective, rules and scoring.</string>
    <string name="manual_startpage_text">Welcome to the manual of this game collection! I hope it will explain everything. \n\nUse the menu on the left side to access the other manual pages.</string>
    <string name="manual_general_main_menu">The usage of the main menu is relatively simple. Just tap on a game to start it. \n\nThe app will automatically load the last played game on a restart, if the app was paused in it. This behavior can be disabled in the settings under \"General\".\n\nThere you can also find the section \"Main menu\", where it\'s possible to hide and reorder games in the menu and change the number of columns, so more games fit on the screen at once.</string>
    <string name="manual_ui_text">A game will always show a little menu on the bottom part of the screen (Portrait mode) or on the right side (Landscape mode). It will also show the current score and current played time of the game. If possible, these two values will be saved for the high-score list. The menu contains 5 items, which have the following effects (buttons from left to right):\n\nThe \"Scores\" button will show a new window with the high scores and the count of won games of the current game.\n\nThe \"Hint\" button will help you by showing up to 3 possible card movements at once. But this will decrease the current score by 25. Notice that trivial movements like moving every card to an empty field or pressing on the main stack aren\'t shown as a hint. If no hint was shown, the score won\'t decrease.\n\nThe \"Menu\" button shows three different actions: Start a new game by mixing the cards and drawing a new deal. Give cards again will do the same but without the mixing. So it\'s like a restart of the current game. The last option will end the current game and return the app to the main menu.\n\nThe \"Undo\" button will revert the last movement, but this will cost 25 points. This can be used for up to 20 last movements.\n\nThe \"Settings\" button simply opens the settings menu.</string>
    <string name="manual_ui_text_part_1">A game will always show a little menu on the bottom part of the screen (Portrait mode) or on the right side (Landscape mode). It will also show the current score and current played time of the game. The menu contains 5 items, which have the following effects (buttons from left to right)\n\nThe \"Statistics\" button will show a new window with different statistics of the current game, like the high scores.\n\nThe \"Support\" button will show a little help menu. Here you can select:</string>
    <string name="manual_ui_text_part_2">Show hints: Show up to 3 possible card movements at once. But this will decrease the current score by 25. Notice that trivial movements like moving every card to an empty field or pressing on the main stack aren\'t shown as a hint. If no hint was shown, the score won\'t decrease.\n</string>
    <string name="manual_ui_text_part_3">Auto move: Automatically move as many cards as possible. This option is intended to be used in situations eg. when only one card is still faced down, but you need to move every other card on that stack to access it. So this option can speed up the game a little bit.\n</string>
    <string name="manual_ui_text_part_4">Mix cards: If you are in a situation where no movement is possible, you can use this option to mix the current cards. Note that cards already in correct order or cards on the foundation will be ignored in the mixing.\n</string>
    <string name="manual_ui_text_part_5">Game rules: Directly open the manual page of the current game.\n</string>
    <string name="manual_ui_text_part_6">The \"Menu\" button shows three different actions:</string>
    <string name="manual_ui_text_part_7">Start a new game: Mixing the cards and draw a new deal.\n</string>
    <string name="manual_ui_text_part_8">Give cards again: Restart the current game with the same layout of cards.\n</string>
    <string name="manual_ui_text_part_9">Return to main menu: Save the current game state and show the game selection menu.\n</string>
    <string name="manual_ui_text_part_10">The \"Undo\" button will revert the last movement, but this will cost 25 points. This can be used for up to 20 last movements. (The amount can be increased in the expert settings)\n\nThe \"Settings\" button simply opens the settings menu.</string>
    <string name="manual_statistics_part_1">There are statistics collected for each game. You can access them from the in-game menu bar. Collected information are:</string>
    <string name="manual_statistics_part_2">The number of played and won games\n</string>
    <string name="manual_statistics_part_3">The total amount of earned score points\n</string>
    <string name="manual_statistics_part_4">The total amount of help functions used\n</string>
    <string name="manual_statistics_part_5">A high-score list with up to 10 entries, only scores over 0 are saved here\n</string>
    <string name="settings_support">Support</string>
</resources>