<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    a:id="@+id/mainRelativeLayoutBackground"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    tools:context=".ui.GameManager">

    <RelativeLayout
        a:id="@+id/mainRelativeLayoutGame"
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:layout_above="@+id/linearLayout">

        <View
            a:id="@+id/card_highlight"
            a:layout_width="10dp"
            a:layout_height="10dp"
            a:background="@drawable/card_highlight"
            a:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        a:id="@+id/mainRelativeLayoutGameOverlay"
        a:layout_width="match_parent"
        a:layout_height="match_parent"
        a:layout_above="@+id/linearLayout">

        <FrameLayout
            a:layout_width="match_parent"
            a:layout_height="1dp"
            a:layout_alignParentLeft="true"
            a:layout_alignParentStart="true"
            a:layout_alignParentTop="true"
            a:background="#000000" />

        <TextView
            a:id="@+id/mainTextViewTime"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_alignParentBottom="true"
            a:layout_alignParentEnd="true"
            a:layout_alignParentRight="true"
            a:layout_margin="5dp"
            a:maxLines="1"
            a:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            a:id="@+id/mainTextViewWin"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_above="@+id/mainTextViewScore"
            a:layout_alignLeft="@+id/mainTextViewScore"
            a:layout_alignStart="@+id/mainTextViewScore"
            a:maxLines="1"
            a:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView

            a:id="@+id/mainTextViewScore"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_alignParentBottom="true"

            a:layout_alignParentLeft="true"
            a:layout_alignParentStart="true"
            a:layout_margin="5dp"
            a:maxLines="1"
            a:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            a:id="@+id/buttonMainAutoComplete"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_above="@+id/mainTextViewTime"
            a:layout_centerHorizontal="true"
            a:layout_marginBottom="15dp"
            a:background="@android:drawable/btn_default_small"
            a:onClick="menuClick"
            a:text="@string/game_auto_complete_text"
            a:visibility="gone" />

        <TextView
            a:id="@+id/textViewRecycles"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_alignParentLeft="true"
            a:layout_alignParentStart="true"
            a:layout_alignParentTop="true"
            a:background="@drawable/circle"
            a:paddingLeft="4dp"
            a:paddingRight="4dp"
            a:textColor="@android:color/background_dark"
            a:visibility="gone" />

        <View
            a:layout_width="match_parent"
            a:layout_height="4dp"
            a:layout_alignParentLeft="true"
            a:layout_alignParentStart="true"
            a:layout_alignParentTop="true"
            a:background="@drawable/shadow_top_to_bottom" />


        <View
            a:layout_width="match_parent"
            a:layout_height="4dp"
            a:layout_alignParentBottom="true"
            a:layout_alignParentLeft="true"
            a:layout_alignParentStart="true"
            a:background="@drawable/shadow_bottom_to_top" />

        <FrameLayout
            a:layout_width="match_parent"
            a:layout_height="1dp"
            a:layout_alignParentBottom="true"
            a:layout_alignParentLeft="true"
            a:layout_alignParentStart="true"
            a:background="#000000" />

    </RelativeLayout>

    <LinearLayout
        a:id="@+id/linearLayout"
        a:layout_width="match_parent"
        a:layout_height="?attr/actionBarSize"
        a:layout_alignParentBottom="true"
        a:background="#e7e7e7"
        a:baselineAligned="false"
        a:gravity="center"
        a:orientation="horizontal"
        a:visibility="visible">

        <LinearLayout
            a:id="@+id/mainButtonScores"
            a:layout_width="0dp"
            a:layout_height="match_parent"
            a:layout_weight="1"
            a:background="?attr/selectableItemBackground"
            a:onClick="menuClick"
            a:orientation="vertical"
            a:paddingBottom="5dp"
            a:paddingLeft="2dp"
            a:paddingRight="2dp"
            a:paddingTop="5dp">

            <ImageView
                a:id="@+id/button_scores"
                a:layout_width="match_parent"
                a:layout_height="0dp"
                a:layout_weight="1"
                a:contentDescription="@string/title_activity_statistics"
                app:srcCompat="@drawable/icon_star" />

            <de.tobiasbielefeld.solitaire.classes.AutoResizingTextView
                style="@android:style/TextAppearance.Small"
                a:layout_width="match_parent"
                a:layout_height="wrap_content"
                a:layout_marginLeft="2dp"
                a:layout_marginRight="2dp"
                a:gravity="center"
                a:maxLines="1"
                a:text="@string/title_activity_statistics" />
        </LinearLayout>

        <LinearLayout
            a:id="@+id/mainButtonHint"
            a:layout_width="0dp"
            a:layout_height="match_parent"
            a:layout_weight="1"
            a:background="?attr/selectableItemBackground"
            a:onClick="menuClick"
            a:orientation="vertical"
            a:paddingBottom="5dp"
            a:paddingLeft="2dp"
            a:paddingRight="2dp"
            a:paddingTop="5dp">

            <ImageView
                a:id="@+id/button_hint"
                a:layout_width="match_parent"
                a:layout_height="0dp"
                a:layout_weight="1"
                a:contentDescription="@string/title_activity_statistics"
                app:srcCompat="@drawable/icon_lightbulb_on" />

            <de.tobiasbielefeld.solitaire.classes.AutoResizingTextView
                style="@android:style/TextAppearance.Small"
                a:layout_width="match_parent"
                a:layout_height="wrap_content"
                a:layout_marginLeft="2dp"
                a:layout_marginRight="2dp"
                a:gravity="center"
                a:maxLines="1"
                a:text="@string/settings_support" />
        </LinearLayout>

        <LinearLayout
            a:id="@+id/mainButtonRestart"
            a:layout_width="0dp"
            a:layout_height="match_parent"
            a:layout_weight="1"
            a:background="?attr/selectableItemBackground"
            a:onClick="menuClick"
            a:orientation="vertical"
            a:paddingBottom="5dp"
            a:paddingLeft="2dp"
            a:paddingRight="2dp"
            a:paddingTop="5dp">

            <ImageView
                a:id="@+id/button_restart"
                a:layout_width="match_parent"
                a:layout_height="0dp"
                a:layout_weight="1"
                a:contentDescription="@string/menu_main_menu"
                app:srcCompat="@drawable/icon_menu" />

            <de.tobiasbielefeld.solitaire.classes.AutoResizingTextView
                style="@android:style/TextAppearance.Small"
                a:layout_width="match_parent"
                a:layout_height="wrap_content"
                a:layout_marginLeft="2dp"
                a:layout_marginRight="2dp"
                a:gravity="center"
                a:maxLines="1"
                a:text="@string/menu_main_menu" />
        </LinearLayout>

        <LinearLayout
            a:id="@+id/mainButtonUndo"
            a:layout_width="0dp"
            a:layout_height="match_parent"
            a:layout_weight="1"
            a:background="?attr/selectableItemBackground"
            a:onClick="menuClick"
            a:orientation="vertical"
            a:paddingBottom="5dp"
            a:paddingLeft="2dp"
            a:paddingRight="2dp"
            a:paddingTop="5dp">

            <ImageView
                a:id="@+id/button_undo"
                a:layout_width="match_parent"
                a:layout_height="0dp"
                a:layout_weight="1"
                a:adjustViewBounds="false"
                a:contentDescription="@string/menu_undo"
                app:srcCompat="@drawable/icon_undo" />

            <de.tobiasbielefeld.solitaire.classes.AutoResizingTextView
                style="@android:style/TextAppearance.Small"
                a:layout_width="match_parent"
                a:layout_height="wrap_content"
                a:layout_marginLeft="2dp"
                a:layout_marginRight="2dp"
                a:gravity="center"
                a:maxLines="1"
                a:text="@string/menu_undo" />
        </LinearLayout>

        <LinearLayout
            a:id="@+id/mainButtonSettings"
            a:layout_width="0dp"
            a:layout_height="match_parent"
            a:layout_weight="1"
            a:background="?attr/selectableItemBackground"
            a:onClick="menuClick"
            a:orientation="vertical"
            a:paddingBottom="5dp"
            a:paddingLeft="2dp"
            a:paddingRight="2dp"
            a:paddingTop="5dp">

            <ImageView
                a:id="@+id/button_settings"
                a:layout_width="match_parent"
                a:layout_height="0dp"
                a:layout_weight="1"
                a:contentDescription="@string/menu_settings"
                app:srcCompat="@drawable/icon_settings_black" />

            <de.tobiasbielefeld.solitaire.classes.AutoResizingTextView
                style="@android:style/TextAppearance.Small"
                a:layout_width="match_parent"
                a:layout_height="wrap_content"
                a:layout_marginLeft="2dp"
                a:layout_marginRight="2dp"
                a:gravity="center"
                a:maxLines="1"
                a:text="@string/menu_settings" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>